# condanest

./: .gitignore  README.md  appImage.md  plan.md  pyproject.toml  upload_to_pypi.sh
AppDir/: .DirIcon  AppRun  condanest.desktop
packaging/: build-appimage(1).sh
src/condanest/: __init__.py  app.py  backend.py  models.py  qt_app.py  web_app.py
src/condanest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
